--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.2",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.8",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
